# mineria-streaming

./: .gitignore  Dockerfile  README.md  compose.yml  domain.py  pyproject.toml  requirements.txt  results_log.csv  script.Dockerfile  task_2.py
data/: 0b73030a-2939-4f25-9f14-3f283b0f699e.json  0dea498c-f7d7-432b-9301-d46d1bb48679.json
scripts/: generator.py
src/: domain.py  main.py  task_1.py  task_3.py  task_4.py  task_6.py
src/config/: config_task_3.json  config_task_4.json  known_messages.txt
src/task_5/: README.md  main.py  run.sh  run_parametrized.sh  sucess_percentage_polars.py  user_data.sh  validate.sh
src/task_5/infrastructure/: main.tf  user_data.sh  variables.tf
src/task_6/: main.tf  outputs.tf  prepare.sh  variables.tf
tests/: test_task_1.py  test_task_2.py  test_task_3.py  test_task_4.py  test_task_4_1.py
